# notemaker

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: encryption.md
docs/plans/: 2026-02-24-kanban-implementation.md  2026-02-24-kanban-improvements.md  2026-02-24-kanban-markdown-preview.md  2026-02-24-kanban-tasklist-design.md  2026-02-24-recipients-encryption-ui-design.md  2026-02-24-recipients-encryption-ui.md  2026-02-25-attachments-design.md  2026-02-25-attachments-plan.md  2026-02-25-inline-image-preview-design.md  2026-02-25-inline-image-preview-plan.md  2026-02-26-git-history-conflicts-design.md  2026-02-26-git-history-conflicts-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/fs/: commands.rs  encryption.rs  encryption_commands.rs  mod.rs  process.rs  types.rs  watcher.rs
src-tauri/src/git/: commands.rs  types.rs
src/components/: BacklinksPanel.tsx  BranchSwitcher.tsx  CodeBlockEditor.tsx  CommandPalette.tsx  ConflictResolver.tsx  ContextMenu.tsx  DiffViewer.tsx  Editor.tsx  EditorModeToggle.tsx  EditorWithPreview.tsx  ExportDialog.tsx  FrontmatterEditor.tsx  GenerateIdentityDialog.tsx  GitPanel.tsx  GitStatusIndicator.tsx  Icons.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  KanbanEditor.tsx  MarkdownBlockEditor.tsx  NotebookBlock.tsx  NotebookEditor.tsx  PasswordDialog.tsx  (+16 more)
(+42 files in other folders)
