[package]
name = "notemaker"
version = "0.2.2"
description = "Developer notes application"
authors = ["Notemaker Team"]
edition = "2021"

[lib]
name = "notemaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
thiserror = "1"
libc = "0.2"
trash = "5"
git2 = "0.19"
age = { version = "0.10", features = ["armor"] }
base64 = "0.22"
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
